--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gsap/react": "^2.1.0",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.15.19",
+    "@sentry/react": "^7.108.0",
+    "@sentry/vite-plugin": "^2.16.0",
     "autoprefixer": "^10.4.18",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
